--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "axios-extensions": "^3.1.3",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
