--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/pwa": "^3.3.5",
+    "@types/voca": "^1.4.1",
     "axios-extensions": "^3.1.3",
     "core-js": "^3.15.1",
-    "nuxt": "^2.15.8"
+    "nuxt": "^2.15.8",
+    "voca": "^1.4.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
