--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios-extensions": "^3.1.3",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.8",
-    "voca": "^1.4.0"
+    "voca": "^1.4.0",
+    "vue-toggles": "^1.1.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
